--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -35,7 +35,6 @@ For example:
 ==== Required Arguments ====
  # The reference file should be in FASTA format with the either the *.fasta*, *.fna*, or *.fa* file extension. For a transcriptome with multiple genes or isoforms as reference, concatenate all FASTA sequences in a single FASTA file. Alternatively, if there are many files, for example one per chromosome, ex: chr1.fa to chrY.fa, list the FASTA filenames one per line in a file which has the *.txt* extension. The *.txt* is important because PerM examines the file extension to know if the input file is a list of filenames. The filenames need to include the file path (relative or absolute) unless the FASTA files are all in the same directory that PerM is run from.
  # The read file(s) should be in the .fasta, .fastq, .csfasta or .csfastq format. PerM parses a file according to its extension, or the format explicitly specified by the *{{{--readFormat <format>}}}* flag. If there are multiple read files, list each filename, one per line, in a .txt file. PerM takes it as the input and can map multiple read sets in parallel by [http://en.wikipedia.org/wiki/OpenMP OpenMP].
- # The maximum number of mismatches reported ({{{-v}}} flag) can be set to 2 or more. For reads over 64 bp, PerM allows double the number of mismatches specified because reads longer than 64 bp are treated as two separate reads of half the length which must map to adjacent positions in the same direction on the reference, i.e. as a restricted case of the more general paired-end mapping.
 
 ==== Short Options ====
 || *-A* || || Output all alignments within the mismatch threshold, end-to-end.||
@@ -44,7 +43,7 @@ For example:
 || *-A -E* || || Output only the uniquely mapped reads. Any read with two alignments within the mismatch threshold will be ambiguous. ||
 || *-m* || || Create the reference index without reusing the saved index even if available. ||
 || *-s* || _path_ || Save the reference index to accelerate the mapping in the future. If _path_ is not specified, the default path will be used. ||  
-|| *-v* || # || Maximum number of mismatches allowed (or allowed in one end for pair-end reads). ||
+|| *-v* || # || Maximum number of mismatches allowed (or allowed in each end for pair-end reads). For reads longer than 64 bp, PerM allows double the number of mismatches specified because reads longer than 64 bp are treated as two separate reads of half the length which must map to adjacent positions in the same direction on the reference, i.e. as a restricted case of the more general paired-end mapping. ||
 || *-t* || # || Number of bases at the 5' end of each read to ignore. For example, if the first 5 bases are used as a barcode or to index multiple samples together, use -t 5. If not specified, no initial bases will be ignored. ||
 || *-T* || # || Number of bases in each read to use, starting after any bases ignored by -t option. Later bases at the 3' of the read are ignored. For example, -T 30 means use only first 30 bases (signals) after the any bases ignored due to the -t option. ||
 || *-k* || # || Specifies maximum number of alignments to output. The default value is 200 if the -k flag is not given. Alignments for reads mapping to more than the maximum number positions will not be output. Use the -a option to collect reads which exceeded the maximum.||
