--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -36,22 +36,24 @@ For example:
  # The reference file should be in FASTA format with the either the *.fasta*, *.fna*, or *.fa* file extension. For a transcriptome with multiple genes or isoforms as reference, concatenate all FASTA sequences in a single FASTA file. Alternatively, if there are many files, for example one per chromosome, ex: chr1.fa to chrY.fa, list the FASTA filenames one per line in a file which has the *.txt* extension. The *.txt* is important because PerM examines the file extension to know if the input file is a list of filenames. The filenames need to include the file path (relative or absolute) unless the FASTA files are all in the same directory that PerM is run from.
  # The read file(s) should be in the .fasta, .fastq, .csfasta or .csfastq format. PerM parses a file according to its extension, or the format explicitly specified by the *{{{--readFormat <format>}}}* flag. If there are multiple read files, list each filename, one per line, in a .txt file. PerM takes it as the input and can map multiple read sets in parallel by [http://en.wikipedia.org/wiki/OpenMP OpenMP].
 
-==== Short Options ====
-|| *-A* || || Output all alignments within the mismatch threshold, end-to-end.||
-|| *-B* || || Output best alignments in terms of mismatches in the threshold. ||
-|| *-E* || || Output only the uniquely mapped reads. ||
-|| *-A -E* || || Output only the uniquely mapped reads. Any read with two alignments within the mismatch threshold will be ambiguous. ||
-|| *-m* || || Create the reference index without reusing the saved index even if available. ||
-|| *-s* || _path_ || Save the reference index to accelerate the mapping in the future. If _path_ is not specified, the default path will be used. ||  
+==== Short Options (grouped by related functionality) ====
+|| *-A* || Output *all* alignments within the mismatch threshold (see *-v* option), end-to-end.||
+|| *-B* || Output *best* alignments in terms of mismatches in the threshold (see *-v* option). For example, if a read has no perfect match alignments, two single base mismatch alignments, and additional alignments with more mismatches, only the two single base mismatch alignments will be output. *-B* is the default mode if neither *-A* or *-B* is specified. ||
+|| *-E* || Output only uniquely mapped reads _remaining after the *best* down selection has been applied if applicable_. When combined with the *-A* option, only reads with a single alignment within the mismatch threshold (see *-v* option) will be output. ||
+
 || *-v* || # || Maximum number of mismatches allowed (or allowed in each end for pair-end reads). For reads longer than 64 bp, PerM allows double the number of mismatches specified because reads longer than 64 bp are treated as two separate reads of half the length which must map to adjacent positions in the same direction on the reference, i.e. as a restricted case of the more general paired-end mapping. ||
+|| *-k* || # || Specifies maximum number of alignments to output. The default value is 200 if the -k flag is not given. Alignments for reads mapping to more than the maximum number positions will not be output. Use the -a option to collect reads which exceeded the maximum.||
+
 || *-t* || # || Number of bases at the 5' end of each read to ignore. For example, if the first 5 bases are used as a barcode or to index multiple samples together, use -t 5. If not specified, no initial bases will be ignored. ||
 || *-T* || # || Number of bases in each read to use, starting after any bases ignored by -t option. Later bases at the 3' of the read are ignored. For example, -T 30 means use only first 30 bases (signals) after the any bases ignored due to the -t option. ||
-|| *-k* || # || Specifies maximum number of alignments to output. The default value is 200 if the -k flag is not given. Alignments for reads mapping to more than the maximum number positions will not be output. Use the -a option to collect reads which exceeded the maximum.||
+
+|| *-m* || || Create the reference index without reusing the saved index even if available. ||
+|| *-s* || _path_ || Save the reference index to accelerate the mapping in the future. If _path_ is not specified, the default path will be used. ||
 
 || *-o* || _filepath_ || Name of mapping output file when mapping a single read set. The output file format will be either the .mapping tab delimited text format or the SAM format as determined by the extension of the output filename. For example {{{-o out.sam}}} will output in SAM format; {{{-o /path/to/out.mapping}}} will output in .mapping format. Use *--outputFormat* to override this behavior. The *-o* option does not apply when multiple reads sets are being mapped at once to take advantage of multiple CPUs (cores); see the *-d* option for that case. ||
 || *-d* || _dirpath_ || Output directory for mapping output files when mapping multiple read sets (output files will be named automatically). If the directory specified does not exist, the output directory will be created provided the parent directory exists. If the *-d* switch is not specified, files will be written to the directory PerM is run from. Note: if -d _filepath_ is specified when mapping a single read set, _dirpath_ will be prepended to _filepath_; however, this usage is not recommended. ||
 || *-a* || _filepath_ || Create a FASTA (FASTQ) file for reads mapped to more positions than the threshold specified by -k or the default of 200. ||
-|| *-u* || _filename_ || Create a FASTA (FASTAQ) file of unmapped reads. When a single read set is mapped, _filename_ specifies the name of the output file. When multiple read sets are mapped, _filename_ is irrelevant and should be omitted; the files of unmapped sequences will automatically be named and created in the directory PerM is run from. ||
+|| *-u* || _filepath_ || Create a FASTA (FASTAQ) file of unmapped reads. When a single read set is mapped, _filename_ specifies the name of the output file. When multiple read sets are mapped, _filename_ is irrelevant and should be omitted; the files of unmapped sequences will automatically be named and created in the directory PerM is run from. ||
 
 ====Long Options====
 || *--noSamHeader*|| || Do not include a SAM header. This makes it easier to concatenate multiple SAM output files. ||
