--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -37,9 +37,9 @@ For example:
  # The read file(s) should be in the .fasta, .fastq, .csfasta or .csfastq format. PerM parses a file according to its extension, or the format explicitly specified by the *{{{--readFormat <format>}}}* flag. If there are multiple read files, list each filename, one per line, in a .txt file. PerM takes it as the input and can map multiple read sets in parallel by [http://en.wikipedia.org/wiki/OpenMP OpenMP].
 
 ==== Short Options (grouped by related functionality) ====
-|| *-A* || Output *all* alignments within the mismatch threshold (see *-v* option), end-to-end.||
-|| *-B* || Output *best* alignments in terms of mismatches in the threshold (see *-v* option). For example, if a read has no perfect match alignments, two single base mismatch alignments, and additional alignments with more mismatches, only the two single base mismatch alignments will be output. *-B* is the default mode if neither *-A* or *-B* is specified. ||
-|| *-E* || Output only uniquely mapped reads _remaining after the *best* down selection has been applied if applicable_. When combined with the *-A* option, only reads with a single alignment within the mismatch threshold (see *-v* option) will be output. ||
+|| *-A* || || Output *all* alignments within the mismatch threshold (see *-v* option), end-to-end.||
+|| *-B* || || Output *best* alignments in terms of mismatches in the threshold (see *-v* option). For example, if a read has no perfect match alignments, two single base mismatch alignments, and additional alignments with more mismatches, only the two single base mismatch alignments will be output. *-B* is the default mode if neither *-A* or *-B* is specified. ||
+|| *-E* || || Output only uniquely mapped reads _remaining after the *best* down selection has been applied if applicable_. When combined with the *-A* option, only reads with a single alignment within the mismatch threshold (see *-v* option) will be output. ||
 
 || *-v* || # || Maximum number of mismatches allowed (or allowed in each end for pair-end reads). The default value is the number of mismatches that the seed used is fully sensitive to. For reads longer than 64 bp, PerM allows double the number of mismatches specified (or the default) because reads longer than 64 bp are treated as two separate reads of half the length which must map to adjacent positions in the same direction on the reference, i.e. as a restricted case of the more general paired-end mapping. ||
 || *-k* || # || Specifies maximum number of alignments to output. The default value is 200 if the -k flag is not given. Alignments for reads mapping to more than the maximum number positions will not be output. Use the -a option to collect reads which exceeded the maximum.||
