--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -41,7 +41,7 @@ For example:
 || *-B* || || Output *best* alignments in terms of mismatches in the threshold (see *-v* option). For example, if a read has no perfect match alignments, two single base mismatch alignments, and additional alignments with more mismatches, only the two single base mismatch alignments will be output. *-B* is the default mode if neither *-A* or *-B* is specified. ||
 || *-E* || || Output only uniquely mapped reads _remaining after the *best* down selection has been applied if applicable_. When combined with the *-A* option, only reads with a single alignment within the mismatch threshold (see *-v* option) will be output. ||
 
-|| *-v* || # || Maximum number of mismatches allowed (or allowed in each end for pair-end reads). The default value is the number of mismatches that the seed used is fully sensitive to. For reads longer than 64 bp, PerM allows double the number of mismatches specified (or the default) because reads longer than 64 bp are treated as two separate reads of half the length which must map to adjacent positions in the same direction on the reference, i.e. as a restricted case of the more general paired-end mapping. ||
+|| *-v* || # || Maximum number of mismatches allowed (or allowed in each end for pair-end reads). The default value is the number of mismatches that the seed used is fully sensitive to.||
 || *-k* || # || Specifies maximum number of alignments to output. The default value is 200 if the -k flag is not given. Alignments for reads mapping to more than the maximum number positions will not be output. Use the -a option to collect reads which exceeded the maximum.||
 
 || *-t* || # || Number of bases at the 5' end of each read to ignore. For example, if the first 5 bases are used as a barcode or to index multiple samples together, use -t 5. If not specified, no initial bases will be ignored. ||
