Slightly cleaned up answers for Q1-Q3.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -6,20 +6,20 @@ Here are the answers to some technical questions that I have been asked about ho
 For questions about PerM's algorithm, you may also want to check the [http://code.google.com/p/perm/wiki/QAin2008USC_MCB_Retreat Q & A questions in the 2008 UCS MCB retreat]. You are very welcome to email me directly.
 === Q1: How can I map reads to multiple references? ===
 
-PerM can accept multiple FASTA files for the reference and each FASTA file can contain multiple sequences. For a collection of short reference sequences such as genes it is probably simplest to concatenate all the sequences into a single FASTA file. But for large references files, for example full chromosomes, it is often more convenient to provide PerM with a single file, e.g. *ref.txt* which contains a list of the reference file names (one per line). A reference files must have the .txt extension because PerM uses the file extension to distinguish between FASTA input and a reference to a list of FASTA files.
+PerM can accept multiple FASTA files for the reference and each FASTA file can contain multiple sequences. For a collection of short reference sequences such as genes it is probably simplest to concatenate all the sequences into a single FASTA file. But for large references files, for example full chromosomes, it is often more convenient to provide PerM with a single file, e.g. *ref.txt* which contains a list of the reference file names (one per line). When the reference file is a list of FASTA files it must have the .txt extension because PerM uses the file extension to distinguish this case from an ordinary FASTA reference file.
 
 === Q2: How many mismatches should I allow; is it correlated with the --seed option? ===
 
 It depends on your read length, the sequencing platform error rate, expected biological variation, and your analysis needs. The *--seed* option determines how many mismatches can be found at full sensitivity though a higher number of mismatches can be found in many cases. The *-v* option sets the mismatch reporting threshold. For example, *--seed F3 -v 5* will report _every_ alignment with up to 3 mismatches and also theoretically report ~80% and ~60% of the alignments with 4 and 5 mismatches respectively. Seeds fully sensitive to larger numbers of mismatch require more time to run.
 
-It is permissible to set the reporting limit to less than the seed full sensitivity limit, e.g. *--seed F3 -v 2*. This may be convenient if an F3 index has already been built for the reference. However, in such a case it will be more efficient to build and use an F2 index and use it, e.g. *--seed F2 -v 2*, when a large number of reads must be mapped.
+It is permissible to set the reporting limit to less than the seed full sensitivity limit, e.g. *--seed F3 -v 2*. This may be convenient if an F3 index has already been built for the reference. However when a large number of reads must be mapped, it would be more efficient to build and use an F2 index, e.g. *--seed F2 -v 2*, instead.
 
 PerM, like most short read alignment programs, is primarily concerned with the case of only a few mismatches caused by the limitations of the sequencing technology. However, users may also be concerned with biological variation, e.g. due to SNPs or other evolutionary changes. In some cases the reference sequence(s) may only be an approximation to what may appear in the sequence sample, for example be a known strain. In metagenomics even the degree of expected variation may be quite uncertain. For large biological variation, a program like blastx which is geared toward _biological_ similarity may be more appropriate. However the most efficient approach may still be a quick mapping by PerM of what is mappable with limited variation, followed by further attempts to map the remaining reads with other tools.
 
 
 === Q3: Will using the F3 or F4 seed increase running time by a lot? ===
 
-For transcriptome or small genome with long reads (50+ bp) it is unnecessary to worry a lot about the performance. However, speed is a concern when the reference has a lot of repeat regions and the reads are short so they randomly mapped to a lot of places. PerM actually reaches *40M* 50 bp reads per hour even to hg18, with the F3 seed. For the F4 seed, it reaches about *2M* reads per hours for entire genome, depending on whether the reads are from more repetitive regions. Let me know if the speed is lower than that. The speed of your disk read/write could be the bottleneck.
+For transcriptome or small genome with long reads (50+ bp) it is unnecessary to worry a lot about the performance. However, speed is a concern when the reference has a lot of repeat regions and the reads are short such that they randomly map to a lot of places. PerM actually reaches *40M* 50 bp reads per hour even to hg18, with the F3 seed. For the F4 seed, it reaches about *2M* reads per hours for entire genome, depending on whether the reads are from more repetitive regions. Let me know if the speed is lower than that. The speed of your disk read/write could be the bottleneck.
 
 === Q4: Do you have a script to summarize how many reads are mapped to a reference? ===
 
