Started added changes for PerM. Need to add more later.

--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,14 +1,4 @@
-#summary of changes to PerM.
+== PerM Changelog == 
 
-= Version 0.3.1 = 
-
-== Changes in command line arguments. ==
-
- * The argument order to {{{mapcand}}} has changed to be consistent with the rest of the comb commands.  Now give the reference, followed by the file produced by {{{mapcount}}}.
-  {{{comb mapcount reference.fa reads.map_cnt}}}
-
- * The arguments to {{{snpcall}}} have changed.  The callrates file is now optional.  If given it is passed in with {{{-r/--call-rates}}}.
-
-== Changes in command line options == 
-
- * There is a new option to {{{view}}} and {{{easyrun}}} for hiding SNPs which were called back to the reference base.  {{{--hide-unchanged}}} will not output these SNPs in the text view.
+|| Version || Summary of changes ||
+|| *0.3.1* || Fixed bug introduced in PerM 0.3.0 where reference sequence was not reverse complemented in .mapping output if read file was in FASTA format. ||
