--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -2,7 +2,7 @@
 
 *Version 0.3.2.0*
 
- * Changed definition of *-k* parameter to mean alignments will not be output if there are more than # alignments rather than # or more alignments. The current definition is the same as the meaning of the -k in Bowtie. To convert from using an older version of PerM, change -k # to -k #-1, e.g. -k 5 to -k 4.
+ * Changed definition of *-k* parameter to mean alignments will not be output if there are more than # alignments rather than # or more alignments. The current definition is the same as the meaning of the *-k* switch in Bowtie. To convert from using an older version of PerM, change -k # to -k #-1, e.g. *-k 5* to *-k 4*.
 
  * Fixed a segmentation fault that occurred when *-k 1* or *-k 2* was used with the *-a* switch.
 
