--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -48,7 +48,7 @@ For example:
 || *-T* || # || Number of bases in each read to use, starting after any bases ignored by -t option. Later bases at the 3' of the read are ignored. For example, -T 30 means use only first 30 bases (signals) after the any bases ignored due to the -t option. ||
 
 || *-m* || || Create the reference index without reusing the saved index even if available. ||
-|| *-s* || _path_ || Save the reference index to accelerate the mapping in the future. If _path_ is not specified, the default path will be used. ||
+|| *-s* || _path_ || Save the reference index to accelerate the mapping in the future. If _path_ is not specified, the index will be created in the current working directory (i.e. where PerM is run from) using the default index name. If _path_ is a directory, the index will be created in the specified directory using the default index name (directory must exist; it will not automatically be created). If _path_ is a file path, the index will be created with the specified name. ||
 
 || *-o* || _filepath_ || Name of mapping output file when mapping a single read set. The output file format will be either the .mapping tab delimited text format or the SAM format as determined by the extension of the output filename. For example {{{-o out.sam}}} will output in SAM format; {{{-o /path/to/out.mapping}}} will output in .mapping format. Use *--outputFormat* to override this behavior. The *-o* option does not apply when multiple reads sets are being mapped at once to take advantage of multiple CPUs (cores); see the *-d* option for that case. ||
 || *-d* || _dirpath_ || Output directory for mapping output files when mapping multiple read sets (output files will be named automatically). If the directory specified does not exist, the output directory will be created provided the parent directory exists. If the *-d* switch is not specified, files will be written to the directory PerM is run from. Note: if -d _filepath_ is specified when mapping a single read set, _dirpath_ will be prepended to _filepath_; however, this usage is not recommended. ||
