--- a/wiki/Output.wiki
+++ b/wiki/Output.wiki
@@ -41,7 +41,7 @@ Each line represents a single mapping with the following fields:
   * The read sequence. For SOLiD reads, the first base from the agent (not in the reference) is not included. The first color signal is translated into a base for display.
   * Reference sequence ID (begins at 0 and numbered according to the order in the reference list)
   * 3' location on the reference sequence (first base is 0). 
-  * The mapped reference sequence, reversed-complemented if the read maps to the reverse strand. For SOLiD reads, this region is translated into colors for comparison to the read.
+  * The mapped reference sequence region, reversed-complemented if the read maps to the reverse strand. Thus, this column will always be the same as the read sequence for perfect matches regardless of which strand the read maps to. For SOLiD reads, this region is translated into colors for comparison to the read.
   * Positive (forward) or negative (backward) strand that the reads mapped to.
   * Number of mismatches or the mismatches score (the sum of quality scores in the mis-matched bases) if available. 
   * Number of mappings that this read aligns to, including the current one. 
