Edited wiki page Manual through web user interface.

--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -62,7 +62,7 @@ For example:
 || *--statsOnly* || || Output the mapping statistics to stdout only, without saving alignments to files. ||
 || *--ignoreQS* || || Ignore the quality scores in FASTQ or QUAL files. ||
 || *--printNM* || || When quality scores are available, use this flag to print number of mismatches, instead of mismatch scores in mapping format. ||
-|| *--seed* || {F,,0,, | F,,1,, | F,,2,, | F,,3,, | F,,4,, | S,,11,, | S,,20,, | ,,S12,,} || Specify the seed pattern. The F,,0,,, F,,1,,, F,,2,,, F,,3,,, and F,,4,, seeds are fully sensitive to 0-4 mismatches respectively. The S,,11,, S,,20,, S,,12,, seeds are designed for the SOLiD sequencer.  An S,,kj,, seed is full sensitive to k adjacent mismatch pairs (SNP signature is color space) and j isolated mismatches.  See [http://code.google.com/p/perm/wiki/Algorithms the algorithm page] for more information about the seed patterns.||
+|| *--seed* || {F,,0,, | F,,1,, | F,,2,, | F,,3,, | F,,4,, | S,,11,, | S,,20,, | S,,12,,} || Specify the seed pattern. The F,,0,,, F,,1,,, F,,2,,, F,,3,,, and F,,4,, seeds are fully sensitive to 0-4 mismatches respectively. The S,,11,, S,,20,, S,,12,, seeds are designed for the SOLiD sequencer.  An S,,kj,, seed is full sensitive to k adjacent mismatch pairs (SNP signature is color space) and j isolated mismatches.  See [http://code.google.com/p/perm/wiki/Algorithms the algorithm page] for more information about the seed patterns.||
 || *--refFormat* || _{fasta | list | index }_|| Assume references sequence(s) are in the specified format, instead of guessing according to file's extension. ||
 || *--readFormat*||_{fasta | fastq | csfasta | csfastq}_|| Assume reads are in the specified format, instead of guessing according to the file(s)' extension. ||
 || *--outputFormat*||_{ sam | mapping }_|| Override the default output mapping format option or specify it explicitly when the output file extension is not .sam or .mapping. ||
