Improved description of version 0.3.6.0 change.

--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -2,7 +2,7 @@
 
 *Version 0.3.6.0*
 
- * Fixed an error in reading reference sequence(s) with unknown (N) bases.
+ * Fixed an error in reading reference sequences when lowercase 'n' instead of uppercase was used for an unknown base. Closes Issue [http://code.google.com/p/perm/issues/detail?id=46 46].
 
 *Version 0.3.5.0*
 
@@ -10,7 +10,7 @@
 
  * Closed Issue [http://code.google.com/p/perm/issues/detail?id=43 43].
 
- * Added new --includeReadsWN switch to refine handling of reads with Ns. Previously the only options were to exclude reads with Ns or to arbitrarily substitute A for the unknown nucleotide. The new switch allows the substitution to be limited to only reads with up to a specified number of unknown bases; reads with a higher number of bases are discarded. Closes Issue [http://code.google.com/p/perm/issues/detail?id=44 44]
+ * Added new --includeReadsWN switch to refine handling of reads with Ns. Previously the only options were to exclude reads with Ns or to arbitrarily substitute A for the unknown nucleotide. The new switch allows the substitution to be limited to only reads with up to a specified number of unknown bases; reads with a higher number of bases are discarded. Closes Issue [http://code.google.com/p/perm/issues/detail?id=44 44].
 
 *Version 0.3.3.0*
 
