--- a/wiki/Limitations.wiki
+++ b/wiki/Limitations.wiki
@@ -3,8 +3,7 @@
 
   * PerM doesn't support reads shorter than 25 base pairs for the F2 seed. It doesn't handle reads shorter than 13 bp for the F0 (exact match) seed.  
   * PerM doesn't support SOLiD reads with more than 64 base pairs.
-  * PerM doesn't support single-end Illumina reads with more than 128 base pairs.
-  * PerM doesn't support mate-paired Illumina reads with more than 64 base pairs in each end. It will cut the pair ended reads into 64-bp by default.
+  * PerM doesn't support single-end or mate-paired Illumina reads with more than 128 base pairs in each end.
   * A maximum of 1 million mappings per read (end) will be written to the output file. (The default limit is 200, which can be increased by -k).
   * The reference sequences(s) can't be more than 4 GB in aggregate.
   * A single reference sequence should be larger than the read length. 
@@ -14,6 +13,6 @@
 
 For reads longer than 64 bp, it is usually best to use the -T 64 setting to map the first 64 bases because those typically have the lowest error rate. However the -T and -t options may be combined to select any range of positions to map.
 
-We suggest users split reads into one million reads per file so they can mapped in parallel. More generally, try splitting the reads into files of R reads each where where R = N / C, N is the total number of reads and C is the total number of cores. PerM has been tested on a 48 core computer (quad CPU with 12 cores / CPU) and shown to perform well. The PerM run time will be dictated by the last read set to finish. In practice, read set run times seem to be well balanced, but as a further caution one might choose split the reads into even smaller chunks for better load balancing. Preferably the number of chunks should be an integer multiple of the number of CPUs (cores), e.g. 3 `*` C. In this case, PerM will initially process the first C chunks and then begin processing additional chunks as CPUs (cores) become free.
+We suggest users split reads into one million reads per file so they can mapped in parallel. More generally, try splitting the reads into files of R reads each where where R = N / C, N is the total number of reads and C is the total number of cores. PerM has been tested on a 48-core computer (quad CPU with 12 cores / CPU) and shown to perform well. The PerM run time will be dictated by the last read set to finish. In practice, read set run times seem to be well balanced, but as a further caution one might choose split the reads into even smaller chunks for better load balancing. Preferably the number of chunks should be an integer multiple of the number of CPUs (cores), e.g. 3 `*` C. In this case, PerM will initially process the first C chunks and then begin processing additional chunks as CPUs (cores) become free.
 
 [http://code.google.com/p/perm/wiki/Manual Back to manual]
